--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" aria-label="link to icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="Ashutosh7i" content="Portfolio of Aashutosh Soni Ashutosh7i" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" aria-label="link" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" aria-label="link" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- SEO Metadata -->
     <title>Aashutosh Soni | Software Engineer</title>
